// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewSharingButton/> render() should render as disabled because this is a system view 1`] = `
<button
  aria-disabled="true"
  class="wrapper fill secondary medium isDisabled"
  id="view-sharing-button"
  type="button"
>
  <span
    class="wrapper label"
  >
    <i
      class="material-icons icon isLeft medium"
    >
      person_add
    </i>
    Sharing: 
    <b>
      Public
    </b>
  </span>
</button>
`;

exports[`<ViewSharingButton/> render() should render as disabled because user is not allowed 1`] = `
<button
  aria-disabled="true"
  class="wrapper fill secondary medium isDisabled"
  id="view-sharing-button"
  type="button"
>
  <span
    class="wrapper label"
  >
    <i
      class="material-icons icon isLeft medium"
    >
      person_add
    </i>
    Sharing: 
    <b>
      Public
    </b>
  </span>
</button>
`;

exports[`<ViewSharingButton/> render() should render as private 1`] = `
<button
  aria-disabled="false"
  class="wrapper fill secondary medium"
  id="view-sharing-button"
  type="button"
>
  <span
    class="wrapper label"
  >
    <i
      class="material-icons icon isLeft medium"
    >
      person_add
    </i>
    Sharing: 
    <b>
      Private
    </b>
  </span>
</button>
`;

exports[`<ViewSharingButton/> render() should render as public 1`] = `
<button
  aria-disabled="false"
  class="wrapper fill secondary medium"
  id="view-sharing-button"
  type="button"
>
  <span
    class="wrapper label"
  >
    <i
      class="material-icons icon isLeft medium"
    >
      person_add
    </i>
    Sharing: 
    <b>
      Public
    </b>
  </span>
</button>
`;

exports[`<ViewSharingButton/> render() should render as shared 1`] = `
<button
  aria-disabled="false"
  class="wrapper fill secondary medium"
  id="view-sharing-button"
  type="button"
>
  <span
    class="wrapper label"
  >
    <i
      class="material-icons icon isLeft medium"
    >
      person_add
    </i>
    Sharing: 
    <b>
      Shared
    </b>
  </span>
</button>
`;
